# magic_square

./: .gitignore  README.md  package-lock.json  package.json
c++/: CMakeLists.txt  magic_square.cpp  magic_square.hpp
c++/tests/: magic_squareTest.cpp
src/: auxiliars.test.ts  auxiliars.ts  cuts.test.ts  magic_list.test.ts  magic_list.ts  magic_square.test.ts  magic_square.ts  test_auxiliars.ts
